--- a/Assignments/Check_in_3.ipynb
+++ b/Assignments/Check_in_3.ipynb
@@ -7,7 +7,7 @@
         "id": "3f7ec765"
       },
       "source": [
-        "**Turn in instructions** Do the assignment on Google Colab by making a copy of this document. You can insert code cells below each question to work your answer. Once you are finished, *adjusting the sharing permissions so \"anyone with a link can view the document\"*. Turn in the url of the Colab document to canvas so Akshay and I can review it.\n",
+        "**Turn in instructions** Do the assignment on Google Colab by making a copy of this document. You can insert code cells below each question to work your answer. Once you are finished, *adjusting the sharing permissions so \"anyone with a link can view the document\"*. Turn in the url of the Colab document to canvas so Natlie and I can review it.\n",
         "\n",
         "(Some students have been having trouble with colab version control and sharing permissions. So if you want to upload a static document instead of a link, download this file as an `.ipynb` file and upload that to Canvas. Either type of submission is fine.)"
       ]
@@ -217,6 +217,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -233,9 +236,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.9.15"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
