--- a/lectures/Lecture 10 - Priors, Priors, Priors.ipynb
+++ b/lectures/Lecture 10 - Priors, Priors, Priors.ipynb
@@ -354,6 +354,8 @@
    "source": [
     "## For parameters that must be positive\n",
     "\n",
+    "- Add the gamma distribution\n",
+    "\n",
     "Sometimes all you know about a parameter is that it must be zero or bigger. For example, the hot hands parameter cannot be negative. It's a feature of our model that you perform better when you get them right. So to reflect that, we need positive valued parameters. \n",
     "\n",
     "Furthermore, we should also think that the hot hands factor is never super big. If your performance goes up by 0.5 every time you get a cup right, that is pretty implausible. It's a huge jump. It seems like small hot hands factors are the most likely. So we want a distribution that gently slows downward. The exponential is our friend here.\n",
@@ -524,6 +526,8 @@
    "metadata": {},
    "source": [
     "## For anything else\n",
+    "\n",
+    "- Cut this section\n",
     "\n",
     "Finally, there a lot of cases where the prior doesn't nicely fit with any standard named distribution. *Beta*, *Exponential*, and *Normal* cover a wide range of cases. But they don't cover everything. Sometimes you need a weird shape. For example, what if you want a large band of parameters to all be equally likely. The normal distribution has a peak, like a mountain. But you want a plateau. Well, you can combine distributions. Like this:"
    ]
@@ -880,6 +884,8 @@
    "metadata": {},
    "source": [
     "## Accuracy priors\n",
+    "\n",
+    "- accurary prior should be beta(4,1)\n",
     "\n",
     "After class one day, a student and I were discussing the Lady Tasting tea problem. They pointed out that it's actually really weird if her accuracy levels drop below 0.5. 0.5 is just guessing at random. If she has no confidence and no skill, she shouldn't *really* perform worse than guessing at random. \n",
     "\n",
