--- a/lectures/Lecture 4 - The Lady Tasting Tea.ipynb
+++ b/lectures/Lecture 4 - The Lady Tasting Tea.ipynb
@@ -210,14 +210,14 @@
    "id": "d08cacb9",
    "metadata": {},
    "source": [
-    "In our case, these two functions are equivalent. By default, the function assumes that each option has equal probability. So if there are two options, each one shows up 50% of the time. But if we want to modify that probability, we can pass it the optional `p=` argument. To see what the possible arguments of a function are, press shift+tab while you have the function highlighted.\n",
+    "In our case, these two functions are equivalent. By default, the function assumes that each option has equal probability. So if there are two options, each one shows up 50% of the time. But if we want to modify that probability, we can pass it the optional `p=` argument. To see what the possible arguments of a function are, google search for the numpy documentation.\n",
     "\n",
     "    Docstring:\n",
     "    choice(a, size=None, replace=True, p=None)\n",
     "\n",
     "    Generates a random sample from a given 1-D array\n",
     "    \n",
-    "It shows you something called the docstring - a set of helpful reminders for what the parts of a function are and what it does. So this function has 3 optional keyword arguments and one required argument. You can get more information by Google searching the function and going to the documentation page or by expanding the doc string."
+    "It shows you something called the docstring - a set of helpful reminders for what the parts of a function are and what it does. So this function has 3 optional keyword arguments and one required argument."
    ]
   },
   {
