add 3d picture and code refresher

--- a/lectures/Lecture 12 - Models of Heterogeneity.ipynb
+++ b/lectures/Lecture 12 - Models of Heterogeneity.ipynb
@@ -885,203 +885,7 @@
     "\n",
     "A natural approach would be to just add another loop, building a triple nested loop to search through all three grids. This is a bad idea. For one, it will take a lot of time. Our double loop takes 10 seconds to run. If we want to try 100 different values for the rate parameter, we'll need to repeat the double loop 100 times. So that's 1000 seconds or roughly 15 minutes. We could try to cut that time down by searching smaller grid sizes. The tradeoff is that our approximation of the posterior gets worse. More seriously, the grid approximation really starts to fail once you have four or more parameters. The time it takes to evaluate every combination will inflate rapidly. Meanwhile, if we make the grid more coarse grained, we could start skipping over the important features of the posterior distribution. We might miss a really strong combination all together.\n",
     "\n",
-    "The grid approximation is a great learning tool. It is easy to write code for. It is easy to understand. But no serious modeler can rely on it for any realistic problems. In the next class, we'll abandon it for a state-of-the-art algorithm known as the hamilitonian monte carlo markov chain. It is vastly more complicated. It requires some specialized software. But it can handle models with 3 or 3 million parameters."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fc10a97a",
-   "metadata": {},
-   "source": [
-    "# Left over content"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a9d83f41",
-   "metadata": {},
-   "source": [
-    "----\n",
-    "\n",
-    "*Revise*\n",
-    "\n",
-    "----\n",
-    "\n",
-    ". There are two problems:\n",
-    "\n",
-    "1) Estimation. This model has three adjustable parameters, the two `p`s and the rate of mixing. We don't have a technique for estimating three adjustable parameters at once. And it turns out the techniques that do work are quite tricky to implement. I'll link to my [favourite video on monte carlo markov chains](https://www.youtube.com/watch?v=Qqz5AJjyugM) for the keen students who wants to know about where this class could has gone but didn't.\n",
-    "\n",
-    "2) Why stop at two groups? Asch gives us some evidence that there might be as many as 6 kinds of people in the experiment. He notes 3 kinds of people who are independent based on interview evidence and 3 kinds of conformists. Should we assume all conformists have the same error rates or three seperate error rates? Frankly, I'm not sure.\n",
-    "\n",
-    "There is another, very similar type of model that solves both problems at once. It only has two parameters and represents a broader range of heterogeneity."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "977af131",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def likelihood_mixture(data,rate_of_independents=0.60,independents_p=0.05,conformist_p=0.5,n=12,precision=1000):\n",
-    "    '''\n",
-    "    Calculate the likelihood of the data assuming the mixture model\n",
-    "    Uses a simulation method to estimate the likelihood. Returns both the likelihood\n",
-    "    and the probability distribution over possible outcomes.\n",
-    "\n",
-    "    data - list or array containing counts of the errors made by participants\n",
-    "    \n",
-    "    rate_of_independents - what proportion of the subjects should be \n",
-    "    independents, the rest are conformists.\n",
-    "    independents_p - the probability of a mistake from an independent\n",
-    "    conformist_p - the probability of a mistake from a conformist\n",
-    "    n - the number of critical trials in the experiment\n",
-    "    precision - the number of simulated people \n",
-    "    '''\n",
-    "\n",
-    "    # generate a large number of trials\n",
-    "\n",
-    "    trials = simulate_experiment(\n",
-    "        rate_of_independents=rate_of_independents,\n",
-    "        independents_p=independents_p,\n",
-    "        conformist_p=conformist_p,\n",
-    "        n=n,\n",
-    "        precision=precision)\n",
-    "    trials = list(trials)\n",
-    "\n",
-    "    # construct a probability \n",
-    "    # distribution out of those trials\n",
-    "\n",
-    "    outcomes = range(n+1)\n",
-    "    counts = []\n",
-    "    \n",
-    "    for i in outcomes:\n",
-    "\n",
-    "        matches = trials.count(i)\n",
-    "        counts.append(matches)\n",
-    "\n",
-    "    prob_dist = np.array(counts) / sum(counts)\n",
-    "\n",
-    "    # match up the observations with the \n",
-    "    # respective entry in the probability distribution\n",
-    "\n",
-    "    likelihoods = []\n",
-    "    for i in data:\n",
-    "        likelihood = prob_dist[i]\n",
-    "        likelihoods.append(likelihood)\n",
-    "\n",
-    "    # multiply to find a single likelihood\n",
-    "\n",
-    "    likelihood = np.prod(likelihoods)\n",
-    "\n",
-    "    return likelihood, prob_dist"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "739b20b8",
-   "metadata": {},
-   "source": [
-    "We can test out our likelihood function on the real data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35ac395a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1.287423488179676e-56,\n",
-       " array([0.2745, 0.1725, 0.0535, 0.0185, 0.019 , 0.0445, 0.091 , 0.1225,\n",
-       "        0.101 , 0.067 , 0.0305, 0.005 , 0.0005]))"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "likelihood_mixture(mistakes_treatment,rate_of_independents=0.50,independents_p=0.05,conformist_p=0.6,n=12,precision=2000)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1bc30e18",
-   "metadata": {},
-   "source": [
-    "You'll notice that estimated likelihood is somewhat unstable. It switches between `e-56`, `e-57`, and `e-58` even if we keep our parameters the same.. This is not a great sign. It means our approximation approach is very approximate. To put it into perspective, $\\frac{1}{100}$ can be written as `1e-2` and $\\frac{1}{1000}$ can be written as `1e-3`. If someone told me the likelihood was somewhere between $\\frac{1}{10}$ and $\\frac{1}{1000}$, I wouldn't be very impressed. But that similar to the level of approximation error in our technique. We'll bracket this problem for a minute.\n",
-    "\n",
-    "Our goal is still to figure out which combination of parameters is the best explanation for the data. We can get a sense of that by exploring a range of parameters and seeing how well they match the data, both visually and in terms of likelihood. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5761c8cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\dsaun\\AppData\\Local\\Temp\\ipykernel_1808\\4291833195.py:29: DeprecationWarning: on_submit is deprecated. Instead, set the .continuous_update attribute to False and observe the value changing with: mywidget.observe(callback, 'value').\n",
-      "  widgets.interact_manual(draw_mixture,\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aab4918b13fa41a296641a01dd6024c2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=0.5, description='rate', max=1.0, step=0.01), FloatSlider(value=0.5, d…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import ipywidgets as widgets\n",
-    "\n",
-    "def draw_mixture(data,rate,independent,conformist,precision):\n",
-    "\n",
-    "    precision = int(precision)\n",
-    "\n",
-    "    outcomes = range(13)\n",
-    "    counts = []\n",
-    "    \n",
-    "    for i in outcomes:\n",
-    "\n",
-    "        matches = data.count(i)\n",
-    "        counts.append(matches)\n",
-    "    data_dist = np.array(counts) / sum(counts)\n",
-    "\n",
-    "    likelihood, distribution = likelihood_mixture(data,\n",
-    "        rate_of_independents=rate,\n",
-    "        independents_p=independent,\n",
-    "        conformist_p=conformist,\n",
-    "        n=12,\n",
-    "        precision=precision)\n",
-    "    \n",
-    "    print(likelihood)\n",
-    "\n",
-    "    plt.bar(outcomes,data_dist,alpha=0.5,color=\"grey\",label=\"data\")\n",
-    "    plt.bar(outcomes,distribution,color=\"tab:blue\",alpha=0.5,label=\"model\")\n",
-    "    plt.legend()\n",
-    "\n",
-    "widgets.interact_manual(draw_mixture,\n",
-    "                 data=widgets.fixed(mistakes_treatment),\n",
-    "                 rate=widgets.FloatSlider(min=0, max=1, step=0.01, value=0.5),\n",
-    "                 independent=widgets.FloatSlider(min=0, max=1, step=0.01, value=0.5),\n",
-    "                 conformist=widgets.FloatSlider(min=0, max=1, step=0.01, value=0.5),\n",
-    "                 precision=widgets.Text('2000'));"
+    "The grid approximation is a great learning tool. It is easy to write code for. It is easy to understand. But no serious modeler can rely on it for any realistic problems. In the next class, we'll abandon it for a state-of-the-art algorithm known as the hamilitonian monte carlo markov chain. It is vastly more complicated. It requires some specialized software. But it can handle models with 3 or 3 thousand parameters."
    ]
   }
  ],
