--- a/lectures/Lecture 13 - The Monte Carlo Markov Chain.ipynb
+++ b/lectures/Lecture 13 - The Monte Carlo Markov Chain.ipynb
@@ -29,6 +29,19 @@
    "source": [
     "# The Monte Carlo Markov Chain (MCMC)\n",
     "\n",
+    "Last time, we notice that the grid approximation algorithm starts to collapse when try to fit models with three or more parameters. We have a dilemma: either we use an extremely fine-grain to approximate the posterior and blast our computation time through the roof. Or, we use an course-grain and run the risk of missing the most important features of the posterior.\n",
+    "\n",
+    "One problem with grid approximation is that we spend a lot of time computing in pretty boring regions of the posterior. Take a look at this posterior. Much of the space is basically flat at 0 or nearly 0 posterior probability.\n",
+    "\n",
+    "!()[]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b0ed55f",
+   "metadata": {},
+   "source": [
+    "\n",
     "I'll introduce monte carlo markov chain with a parable. Imagine a skateboard park with a massive bowl at the center. The skateboard park has been carefully measured so we have a grid of x and y coordinates that covers each point in the park. Also imagine there is no friction. A skateboarder rides around the bowl for an hour or so. Every few seconds, an aerial drone stationed directly above the bowl takes a snapshot of the skateboarder. Thousands of snapshots are recorded. In each one, we record the x and y coordinates of the skateboarder. After the hour is over, we compile a list of all the x and y coordinates.\n",
     "\n",
     "In this parable, the depth of the bowl represents areas with high likelihood. The location of the skateboard with respect to x and y represents two different parameter values, perhaps `p` is on one axis and `d` is on another. It turns out that the frequency distribution of locations will perfectly correspond to the depth of the bowl. Or, simply, the skateboarder will get their picture taken most often when they are in the center of the bowl. They will get their picture taken fairly often in the region between the edge and the center. And they will get their picture taken least often at the rim. Why? Well, they are usually only at the rim for a split second before they turn around and go back. But quite often they are flying through the center of the bowl. The laws of gravity and momentum help ensure this is true. Here you can watch a particular version of the MCMC (the Hamiltonian) algorithm working on a bowl shaped distribution.\n",
