Large update to unit 2

--- a/lectures/Lecture 13 - The Monte Carlo Markov Chain.ipynb
+++ b/lectures/Lecture 13 - The Monte Carlo Markov Chain.ipynb
@@ -31,9 +31,17 @@
     "\n",
     "Last time, we notice that the grid approximation algorithm starts to collapse when try to fit models with three or more parameters. We have a dilemma: either we use an extremely fine-grain to approximate the posterior and blast our computation time through the roof. Or, we use an course-grain and run the risk of missing the most important features of the posterior.\n",
     "\n",
-    "One problem with grid approximation is that we spend a lot of time computing in pretty boring regions of the posterior. Take a look at this posterior. Much of the space is basically flat at 0 or nearly 0 posterior probability.\n",
+    "One problem with grid approximation is that we spend a lot of time computing in pretty boring regions of the posterior. Take a look at this posterior. Much of the space is basically flat at 0 or nearly 0 posterior probability.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e03e271",
+   "metadata": {},
+   "source": [
     "\n",
-    "!()[]\n"
+    "![](https://raw.githubusercontent.com/daniel-saunders-phil/cogs-303/main/3D%20mixture.png)\n",
+    "\n"
    ]
   },
   {
@@ -41,6 +49,7 @@
    "id": "7b0ed55f",
    "metadata": {},
    "source": [
+    "What would be a better strategy? What if we could concentrate most of our computational time in the mountains and spent just a little bit of computational time on the prairies around them? Or, more generally, it would be smart to spend our computational energy measuring the posterior in proportion to how high the posterior is.\n",
     "\n",
     "I'll introduce monte carlo markov chain with a parable. Imagine a skateboard park with a massive bowl at the center. The skateboard park has been carefully measured so we have a grid of x and y coordinates that covers each point in the park. Also imagine there is no friction. A skateboarder rides around the bowl for an hour or so. Every few seconds, an aerial drone stationed directly above the bowl takes a snapshot of the skateboarder. Thousands of snapshots are recorded. In each one, we record the x and y coordinates of the skateboarder. After the hour is over, we compile a list of all the x and y coordinates.\n",
     "\n",
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f07849ca",
    "metadata": {},
    "outputs": [],
@@ -311,25 +320,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5636e0f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://raw.githubusercontent.com/daniel-saunders-phil/cogs-303/main/Asch_experiment_1_data\"\n",
-    "# url = r\"C:\\Users\\dsaun\\github_projects\\cogs-303\\Asch_experiment_1_data\" # local path - ignore this\n",
+    "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(url)\n",
-    "df_treatment = df[df.treatment == 1]\n",
-    "mistakes_treatment = df_treatment.mistakes.values"
+    "url = \"https://raw.githubusercontent.com/daniel-saunders-phil/cogs-303/main/Asch_experiment_1_data\"\n",
+    "\n",
+    "data = pd.read_csv(url)\n",
+    "data_treatment = data[data.treatment == 1]\n",
+    "mistakes_treatment = data_treatment.mistakes.values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7a9b8c02",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3,  3,  4,  7,  2,  3,  8,  5,  7,  7,  3,  5,  1,  5,  3,  8,  7,\n",
+       "        6,  4,  5,  5,  4,  8,  7, 10,  3,  6,  9,  7,  6,  3,  4,  6,  3,\n",
+       "        6, 12,  4,  7,  5,  4,  8, 11,  4,  5,  8,  6,  8,  3,  6,  2],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "with pm.Model() as model_2:\n",
     "\n",
@@ -588,13 +612,143 @@
     "    predict = spp.posterior_predictive.error.values[i].flatten()\n",
     "    plt.hist(predict,alpha=0.1,color=\"tab:blue\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1314736f",
+   "metadata": {},
+   "source": [
+    "# The control group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "df4fa76d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 2], dtype=int64)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_control = data[data.treatment == 0]\n",
+    "mistakes_control = data_control.mistakes.values\n",
+    "mistakes_control"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1f4f0083",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Auto-assigning NUTS sampler...\n",
+      "Initializing NUTS using jitter+adapt_diag...\n",
+      "Multiprocess sampling (4 chains in 4 jobs)\n",
+      "NUTS: [w, p0, p1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Turns off some styling */\n",
+       "    progress {\n",
+       "        /* gets rid of default border in Firefox and Opera. */\n",
+       "        border: none;\n",
+       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "        background-size: auto;\n",
+       "    }\n",
+       "    progress:not([value]), progress:not([value])::-webkit-progress-bar {\n",
+       "        background: repeating-linear-gradient(45deg, #7e7e7e, #7e7e7e 10px, #5c5c5c 10px, #5c5c5c 20px);\n",
+       "    }\n",
+       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "        background: #F44336;\n",
+       "    }\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      <progress value='8000' class='' max='8000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [8000/8000 00:06&lt;00:00 Sampling 4 chains, 0 divergences]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sampling 4 chains for 1_000 tune and 1_000 draw iterations (4_000 + 4_000 draws total) took 24 seconds.\n"
+     ]
+    }
+   ],
+   "source": [
+    "with pm.Model() as model_4:\n",
+    "\n",
+    "    # mixture weights\n",
+    "\n",
+    "    w = pm.Dirichlet('w',[1,1])\n",
+    "\n",
+    "    # mixture components\n",
+    "\n",
+    "    p0 = pm.Beta('p0',0.5,2) # independent component\n",
+    "    p1 = pm.Beta('p1',2,0.5) # conformist component\n",
+    "    components = [pm.Binomial.dist(n=12,p=p0),pm.Binomial.dist(n=12,p=p1)]\n",
+    "\n",
+    "    # likelihood\n",
+    "\n",
+    "    y = pm.Mixture('error',w=w,comp_dists=components,observed=mistakes_control)\n",
+    "\n",
+    "    trace_4 = pm.sample()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bee11b2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "az.summary(trace_4)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pymc_env]",
+   "display_name": "pymc_env",
    "language": "python",
-   "name": "conda-env-pymc_env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -606,7 +760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
