add new asch dataset

--- a/lectures/Lecture 12 - Models of Mixtures.ipynb
+++ b/lectures/Lecture 12 - Models of Mixtures.ipynb
@@ -147,7 +147,6 @@
     "from scipy import stats\n",
     "\n",
     "url = \"https://raw.githubusercontent.com/daniel-saunders-phil/cogs-303/main/Asch_experiment_1_data\"\n",
-    "url = r\"C:\\Users\\dsaun\\github_projects\\cogs-303\\Asch_experiment_1_data\" # local path - ignore this\n",
     "\n",
     "df = pd.read_csv(url)\n",
     "df"
@@ -651,6 +650,8 @@
     "import ipywidgets as widgets\n",
     "\n",
     "def draw_mixture(data,rate,independents_p,conformist_p,n):\n",
+    "\n",
+    "    plt.close()\n",
     "\n",
     "    outcomes = range(n+1)\n",
     "\n",
