--- a/lectures/Lecture 13 - The Monte Carlo Markov Chain.ipynb
+++ b/lectures/Lecture 13 - The Monte Carlo Markov Chain.ipynb
@@ -370,7 +370,7 @@
     "\n",
     "1. We have three priors. One of them is for the mixture weight - how many independents vs how many conformists? It is specified as new distribution, the Dirichlet. I'll explain the Dirichlet in due time. But for now know that the `Dirichlet(1,1)` is equivalent to the `beta(1,1)`. The other two priors are for the error rate of each respective group.\n",
     "\n",
-    "2. We have a `pm.Mixture()` function for a likelihood. Instead of writing our own mixture likelihood by hand, PyMC will automatically build one. The advantage of `pm.Mixture` this is that we can write fairly big mixtures (3, 4, or more components in the mixture) without much work. The unit 2 assignment will have you exploit this power. The \n",
+    "2. We have a `pm.Mixture()` function for a likelihood. Instead of writing our own mixture likelihood by hand, PyMC will automatically build one. The advantage of `pm.Mixture` this is that we can write fairly big mixtures (3, 4, or more components in the mixture) without much work. The unit 2 assignment will have you exploit this power. \n",
     "\n",
     "3. The mixture need to take in a list of component distributions, `comp_dists`, which we supplied on the line above. Each component is a binomial distribution. There is a quirk - we have to add the `.dist` method to the Binomials. `.dist` is just how you access something like the raw underlying distribution so other parts of the program can manipulate it. "
    ]
